--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,10 @@
 
 [metadata]
 # Please adapt to package name:
-name = my_microservice
-version = attr: my_microservice.__version__
-description = My-Microservice - a short description
-url = https://github.com/ghga-de/my-microservice
+name = ghga_validator
+version = attr: ghga_validator.__version__
+description = GHGA Validator
+url = https://github.com/ghga-de/ghga-validator
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
 author = German Human Genome Phenome Archive (GHGA)
@@ -39,16 +39,14 @@ install_requires =
     # Please adapt to the current versions of the libraries
     # and remove the unneeded libraries and extras:
     typer==0.7.0
-    ghga-service-commons[api]==0.2.0
     ghga-event-schemas==0.8.0
-    hexkit[akafka,s3,mongodb]==0.9.2
 
 python_requires = >= 3.9
 
 [options.entry_points]
 # Please adapt to package name:
 console_scripts =
-    my-microservice = my_microservice.__main__:run
+    ghga-validator = ghga_validator.__main__:run
 
 [options.extras_require]
 all =
