--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,9 @@ install_requires =
     # and remove the unneeded libraries and extras:
     typer==0.7.0
     ghga-event-schemas==0.8.0
+    linkml == 1.5.0
+    linkml-validator==0.4.5
+
 
 python_requires = >= 3.9
 
