Polish CLI and docs

--- a/.static_files_ignore
+++ b/.static_files_ignore
@@ -4,3 +4,4 @@
 .github/workflows/check_config_docs.yaml
 .github/workflows/check_openapi_spec.yaml
 scripts/update_openapi_docs.py
+.readme_template.md
