--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 ]
 dependencies = [
     "typer ~= 0.7.0",
-    "pydantic >1.10.6, <2",
+    "pydantic >=2, <3",
     "linkml==1.6.1",
     "linkml-runtime==1.6.0",
     "linkml-validator==0.4.5"
