--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,5 +1,7 @@
 # requirements for development and testing this service
 
--r requirements-dev-common.txt
+# common requirements for development and testing
+-r requirements-dev-common.in
 
 # additional requirements can be listed here
+testcontainers[kafka,mongo]>=3.4.1
