--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 
 name = "ghga_validator"
-version = "1.0.0"
+version = "1.1.0"
 description = "GHGA Validator - A Python library and command line utility to validate metadata"
 readme = "README.md"
 authors = [
@@ -26,7 +26,7 @@ classifiers = [
 ]
 dependencies = [
     "typer ~= 0.7.0",
-    "pydantic >1.10.6, <2",
+    "pydantic >=2, <3",
     "linkml==1.6.1",
     "linkml-runtime==1.6.0",
     "linkml-validator==0.4.5"
