--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 
-name = "ghga_validator"
+name = "ghga-validator"
 version = "1.1.0"
 description = "GHGA Validator - A Python library and command line utility to validate metadata"
 readme = "README.md"
@@ -34,7 +34,7 @@ dependencies = [
 
 [project.urls]
 
-Repository = "https://github.com/ghga-de/ghga_validator"
+Repository = "https://github.com/ghga-de/ghga-validator"
 
 [project.scripts]
 
