--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 
-name = "ghga-validator"
+name = "ghga_validator"
 version = "1.1.0"
 description = "GHGA Validator - A Python library and command line utility to validate metadata"
 readme = "README.md"
