--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,10 @@ version = "0.1.0"
 description = "My-Microservice - a short description"
 dependencies = [
     "typer >= 0.9.0",
-    "ghga-service-commons[api] >= 1.2.0",
-    "ghga-event-schemas >= 1.0.0",
-    "hexkit[akafka,s3,mongodb] >= 1.1.0",
+    "pydantic >=2, <3",
+    "linkml==1.6.1",
+    "linkml-runtime==1.6.0",
+    "linkml-validator==0.4.5"
 ]
 
 [project.license]
