--- a/.pyproject_generation/pyproject_custom.toml
+++ b/.pyproject_generation/pyproject_custom.toml
@@ -1,13 +1,15 @@
 [project]
 # please adapt to package name
 name = "ghga_validator"
-version = "0.1.0"
-description = "My-Microservice - a short description"
+version = "1.1.1"
+description = "GHGA Validator - a short description"
 dependencies = [
     "typer >= 0.9.0",
-    "ghga-service-commons[api] >= 1.2.0",
-    "ghga-event-schemas >= 1.0.0",
-    "hexkit[akafka,s3,mongodb] >= 1.1.0"
+    "typer >= 0.9.0",
+    "pydantic >=2, <3",
+    "linkml==1.6.1",
+    "linkml-runtime==1.6.0",
+    "linkml-validator==0.4.5"
 ]
 
 [project.urls]
