--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,14 +22,15 @@ classifiers = [
     "Intended Audience :: Developers",
 ]
 name = "ghga_validator"
-version = "0.1.0"
-description = "My-Microservice - a short description"
+version = "1.1.1"
+description = "GHGA Validator - a short description"
 dependencies = [
+    "typer >= 0.9.0",
     "typer >= 0.9.0",
     "pydantic >=2, <3",
     "linkml==1.6.1",
     "linkml-runtime==1.6.0",
-    "linkml-validator==0.4.5"
+    "linkml-validator==0.4.5",
 ]
 
 [project.license]
