--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ text = "Apache 2.0"
 Repository = "https://github.com/ghga-de/ghga-validator"
 
 [project.scripts]
-ghga-validator = "ghga_validator.__main__:run"
+ghga_validator = "ghga_validator.__main__:run"
 
 [tool.setuptools.packages.find]
 where = [
