--- a/.pyproject_generation/pyproject_custom.toml
+++ b/.pyproject_generation/pyproject_custom.toml
@@ -2,9 +2,8 @@
 # please adapt to package name
 name = "ghga_validator"
 version = "1.1.1"
-description = "GHGA Validator - a short description"
+description = "GHGA Validator - A Python library and command line utility to validate metadata"
 dependencies = [
-    "typer >= 0.9.0",
     "typer >= 0.9.0",
     "pydantic >=2, <3",
     "linkml==1.6.1",
@@ -18,4 +17,4 @@ Repository = "https://github.com/ghga-de/ghga-validator"
 
 [project.scripts]
 # please adapt to package name
-my-microservice = "ghga_validator.__main__:run"
+ghga_validator = "ghga_validator.__main__:run"
