--- a/tests/fixtures/schemas/advance_model.yaml
+++ b/tests/fixtures/schemas/advance_model.yaml
@@ -1,5 +1,5 @@
-id: https://w3id.org/Minimal-Model
-name: Minimal-Model
+id: https://w3id.org/Advance-Model
+name: Advance-Model
 version: 0.9.0
 prefixes:
   linkml: https://w3id.org/linkml/
