--- a/.pyproject_generation/pyproject_custom.toml
+++ b/.pyproject_generation/pyproject_custom.toml
@@ -8,7 +8,8 @@ dependencies = [
     "pydantic >=2, <3",
     "linkml==1.6.1",
     "linkml-runtime==1.6.0",
-    "linkml-validator==0.4.5"
+    "linkml-validator==0.4.5",
+    "setuptools==69.1.1"
 ]
 
 [project.urls]
