--- a/.github/workflows/pypi_publish.yaml
+++ b/.github/workflows/pypi_publish.yaml
@@ -1,8 +1,8 @@
 name: PyPI publish
 
-on: push
-  # release:
-  #   types: [published]
+on:
+  release:
+    types: [published]
 
 jobs:
 
@@ -59,6 +59,5 @@ jobs:
       - name: Test the publish-package action
         uses: ghga-de/gh-action-pypi/publish-package@v1.0.0
         with:
-          debug_mode: "true"
           test_pypi_api_token: ${{ secrets.TEST_PYPI_API_TOKEN }}
           pypi_api_token: ${{ secrets.PYPI_API_TOKEN }}
